--- a/style.css
+++ b/style.css
@@ -2,15 +2,17 @@
 	width: 100px;
 	height: 30px;
 }
-body {
-	background-color: #000;
+
+* {
+	box-sizing: border-box;
 }
 
 .grid__wrapper {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 1160px;
+	padding-right: 80px;
+	width: 1120px;
 	height: 590px;
 	background-color: #262230;
 	border-radius: 20px;
@@ -23,33 +25,33 @@ body {
 			#8159b3 92.71%
 		);
 	overflow: visible;
+	margin-bottom: 100px;
+}
+
+.grid__wrapper_inner {
+	display: flex;
 }
 
 .grid__container {
 	display: grid;
-	padding-top: 8px;
-	width: 1075px;
-	height: 600px;
-	/* margin-right: 40px; */
-	/* scrollbar-width: thin; */
+	width: 980px;
+	height: 489.5px;
 	overflow: auto;
-
 	grid-template-rows: repeat(12, 27px); /* 3 строки */
 	grid-template-columns: repeat(5, 86px);
-	/* grid-gap: 5px; */
 	row-gap: 10px;
+}
 
-	/* column-gap: 6px; */
-	/* grid-auto-flow: dense;
-	grid-auto-flow: column; */
-	/* justify-content: center; */
+.grid__container-month {
+	display: grid;
+	width: 86px;
+	row-gap: 10px;
+	grid-template-rows: repeat(12, 27px); /* 3 строки */
+	grid-template-columns: repeat(1, 86px);
+	margin-right: 12px;
 }
 
 .grid__container_item {
-	/* display: flex; */
-	/* align-items: center;
-	justify-content: center; */
-	/* background-color: #55339b; */
 	background: linear-gradient(
 		180deg,
 		#853ff8 -26.42%,
@@ -57,16 +59,12 @@ body {
 		rgba(102, 42, 148, 0.72) 86.98%,
 		rgba(42, 37, 52, 0.24) 116.26%
 	);
-	/* height: 27px; */
 	width: 86px;
 	border-radius: 4px;
 }
 
 .grid__container_item-colored {
 	background-color: #2f293b;
-	/* display: flex;
-	align-items: center; */
-	/* margin-top: 5px; */
 	height: 27px;
 	width: 86px;
 	border-radius: 4px;
@@ -77,7 +75,7 @@ body {
 	align-items: center;
 	width: 86px;
 	height: 27px;
-	font-family: Proxima Nova;
+	font-family: "ProximaNova", Sans-serif;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 15.2621px;
@@ -102,23 +100,24 @@ body {
 }
 .grid__container::-webkit-scrollbar-thumb {
 	background: linear-gradient(240.95deg, #853ff8 25.01%, #af29f7 87.93%);
-	border-radius: 20px; /* закругления плашки */
+	border-radius: 20px;
 }
 
 .grid__header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	width: 954px;
-	font-family: Proxima Nova;
+	width: 1050px;
+	height: 32px;
+	margin: 30px 0 41px;
+	font-family: "ProximaNova", Sans-serif;
 	font-style: normal;
 	color: #ffffff;
 	font-feature-settings: "liga" off;
 }
 
 .grid__header_text-big {
-	/* margin-left: 155px; */
-	margin-right: -200px;
+	margin-left: 90px;
 	font-weight: 600;
 	font-size: 24px;
 	line-height: 32px;
